@@ -1,6 +1,6 @@
 Package: car
 Version: 3.0-3
-Date: 2018-12-17
+Date: 2018-12-26
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
